Fix post tags wrapping

--- a/resources/sass/_imports/pages/post/_post.sass
+++ b/resources/sass/_imports/pages/post/_post.sass
@@ -128,11 +128,12 @@ body.dark-mode
     .post-tags
         display: flex
         flex-direction: row
-        column-gap: 5px
+        column-gap: 10px
+        flex-wrap: wrap
         .post-tag
             //border: 1px solid $tc-black-light
             border-radius: 50px
-            padding: 0 5px
+            //padding: 0 5px
             //background-color: $tc-grey-dark
             a
                 color: $tc-white
